--- a/Sample1/Sample1.csproj
+++ b/Sample1/Sample1.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Docker.DotNet" Version="3.125.2" />
+    <ProjectReference Include="..\..\..\..\Downloads\Docker.DotNet-master\Docker.DotNet-master\src\Docker.DotNet\Docker.DotNet.csproj" />
   </ItemGroup>
 
 </Project>
